--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Fatima Iqbal Mirza",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5"
   }
