--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,28 +1,36 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "server/index.js",
-            "use": "@vercel/node"
-        },
-        {
-            "src": "index.html",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "css/**/*.css",
-            "use": "@vercel/static"
-        },
-        {
-            "src": "js/**/*.js",
-            "use": "@vercel/static"
-        }
+      {
+        "src": "index.js",
+        "use": "@vercel/node"
+      },
+      {
+        "src": "../index.html",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "../css/**/*.css",
+        "use": "@vercel/static"
+      },
+      {
+        "src": "../js/**/*.js",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "server/index.js"
-        }
-        
+      {
+        "src": "/css/(.*)",
+        "dest": "/css/$1"
+      },
+      {
+        "src": "/js/(.*)",
+        "dest": "/js/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "index.js"
+      }
     ]
-}
+  }
+  
